// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#getStateFromURL will correctly handle multiple instances of the same parameter 1`] = `
{
  "filters": [
    {
      "dependencies": [
        "underscore",
        "another",
      ],
    },
    {
      "keywords": [
        "node",
      ],
    },
  ],
  "resultsPerPage": 20,
  "searchTerm": "node",
  "sortDirection": "asc",
  "sortField": "name",
}
`;

exports[`#getStateFromURL will ignore unrecognized parameters 1`] = `
{
  "searchTerm": "test",
}
`;

exports[`#getStateFromURL will parse range filter types 1`] = `
{
  "filters": [
    {
      "date": [
        {
          "from": 12,
          "to": 4000,
        },
        {
          "to": 4000,
        },
      ],
    },
    {
      "cost": [
        {
          "from": 50,
        },
      ],
    },
    {
      "keywords": [
        "node",
      ],
    },
  ],
}
`;

exports[`#getStateFromURL will parse sortList items 1`] = `
{
  "sortList": [
    {
      "states": "asc",
    },
    {
      "title": "asc",
    },
  ],
}
`;

exports[`#getStateFromURL will parse the current state from the URL 1`] = `
{
  "filters": [
    {
      "dependencies": [
        "underscore",
      ],
    },
    {
      "keywords": [
        "node",
      ],
    },
  ],
  "resultsPerPage": 20,
  "searchTerm": "node",
  "sortDirection": "asc",
  "sortField": "name",
}
`;
